--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c1ff8581",
+   "id": "47b7e997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf9f085c",
+   "id": "08ad1483",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f2ca6815",
+   "id": "1977e4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3ddfbad8",
+   "id": "9d5fb3b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0e3fcbbf",
+   "id": "5bda5cdb",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ca0810ba",
+   "id": "4cdac5dc",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e1a94f46",
+   "id": "774a950f",
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b356c4e7",
+   "id": "ec97918f",
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "63ccc569",
+   "id": "52c67dbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "60f3f68d",
+   "id": "d0fae6c1",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1ebf513e",
+   "id": "babbe901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9cda9229",
+   "id": "dd01fa90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f2ff1a31",
+   "id": "31e92ac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c78c5cae",
+   "id": "4c868e37",
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "203902c3",
+   "id": "537f27e0",
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "0ddb81d9",
+   "id": "959ccd49",
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "71227fa8",
+   "id": "b586cad5",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fc5799d9",
+   "id": "a03f20af",
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2756f8f8",
+   "id": "48c554b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a8b211a9",
+   "id": "96c82d06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d1419772",
+   "id": "fc7b1faa",
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1588,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d05da8c9",
+   "id": "3a4fcca8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1599,7 +1599,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "c10578af",
+   "id": "6615692e",
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5785a727",
+   "id": "9c190b35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1673,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b0be6aed",
+   "id": "e1f2baf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1685,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "50eef909",
+   "id": "c3ea4a50",
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "4e6d2146",
+   "id": "6ca1730a",
    "metadata": {},
    "outputs": [
     {
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3b64a268",
+   "id": "e02b684b",
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d58f3ab2",
+   "id": "ce782be0",
    "metadata": {},
    "outputs": [
     {
@@ -1800,8 +1800,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "id": "726987e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'g_key' from 'config' (C:\\Users\\marko\\World_Weather_Analysis\\config.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_25372/2287817461.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Import the API key.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mg_key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'g_key' from 'config' (C:\\Users\\marko\\World_Weather_Analysis\\config.py)"
+     ]
+    }
+   ],
+   "source": [
+    "# Import the dependencies.\n",
+    "import pandas as pd\n",
+    "import gmaps\n",
+    "import requests\n",
+    "# Import the API key.\n",
+    "from config import g_key"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "70e655f9",
+   "id": "dd04f87c",
    "metadata": {},
    "outputs": [],
    "source": []
